objects/MMPJ_XRM_SocieteConcurrent__c.object
<CustomObject>
    <description>To let purchasers manage competitors for each company</description>
    <fields>
        <fullName>MMPJ_XRM_Date_fin_contrat__c</fullName>
        <label>Date de fin de contrat</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MMPJ_XRM_Negociant_Concurrent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Concurrent</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Veuillez sélectionner un négociant</errorMessage>
            <filterItems>
                <field>MMPJ_Ext_Vign_Societe__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Négociant</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>MMPJ_Ext_Vign_Societe__c</referenceTo>
        <relationshipLabel>Liste des sociétés liées au concurrent</relationshipLabel>
        <relationshipName>Societe_Concurrents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MMPJ_XRM_Note__c</fullName>
        <label>Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MMPJ_XRM_Prix_concurrent_par_Kg__c</fullName>
        <label>Prix concurrent par Kg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MMPJ_XRM_Region_Viticole__c</fullName>
        <label>Région Viticole</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Côte des Blancs / Grands Blancs</fullName>
                </value>
                <value>
                    <fullName>Grande Montagne / Grands Noirs</fullName>
                </value>
                <value>
                    <fullName>Côte des Blancs/ Cuis, Grauves</fullName>
                </value>
                <value>
                    <fullName>Gde Montagne / région Avenay</fullName>
                </value>
                <value>
                    <fullName>Autres crus Blancs/ Villers Marmery</fullName>
                </value>
                <value>
                    <fullName>Grande Vallée/ Cumières - Dizy</fullName>
                </value>
                <value>
                    <fullName>Montagne Noirs</fullName>
                </value>
                <value>
                    <fullName>Massif de Nogent Blancs</fullName>
                </value>
                <value>
                    <fullName>Sézannais</fullName>
                </value>
                <value>
                    <fullName>Région de Congy</fullName>
                </value>
                <value>
                    <fullName>Montgueux</fullName>
                </value>
                <value>
                    <fullName>Vitryat</fullName>
                </value>
                <value>
                    <fullName>Montagne Ouest et rattachés</fullName>
                </value>
                <value>
                    <fullName>Haute Vallée/ Damery, Venteuil</fullName>
                </value>
                <value>
                    <fullName>Pierry</fullName>
                </value>
                <value>
                    <fullName>Epernay et Coteaux Sud</fullName>
                </value>
                <value>
                    <fullName>Vallée de la Marne</fullName>
                </value>
                <value>
                    <fullName>Condé en Brie</fullName>
                </value>
                <value>
                    <fullName>Massif de Saint-Thierry et Vesle</fullName>
                </value>
                <value>
                    <fullName>Vallée de l&apos;Ardres</fullName>
                </value>
                <value>
                    <fullName>Côte des Bars</fullName>
                </value>
                <value>
                    <fullName>Aisnes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MMPJ_XRM_Societe__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Société</label>
        <referenceTo>MMPJ_Ext_Vign_Societe__c</referenceTo>
        <relationshipLabel>Concurrence</relationshipLabel>
        <relationshipName>SocieteConcurrent_Societe</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MMPJ_XRM_surface__c</fullName>
        <label>Surface Contrat (ha)</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Société-Concurrent</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>N°Auto</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sociétés-Concurrents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>